// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FAQBlock
    block={
        Object {
            "fields": Object {
              "buttonLabel": "foo",
              "buttonLink": "foo",
              "headingAndQa": Object {
                "fragments": Array [
                  Array [
                    Object {
                      "key": "foo",
                      "value": "foo",
                    },
                    Object {
                      "_schemaRef": "foo",
                      "key": "foo",
                      "type": "foo",
                      "value": "foo",
                    },
                    Object {
                      "_schemaRef": "foo",
                      "key": "foo",
                      "type": "foo",
                      "value": null,
                    },
                    Object {
                      "_schemaRef": "foo",
                      "key": "foo",
                      "type": "foo",
                      "value": null,
                    },
                    Object {
                      "_schemaRef": "foo",
                      "key": "foo",
                      "type": "foo",
                      "value": "foo",
                    },
                  ],
                ],
              },
              "title": "foo",
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w100 flex content-width"
>
        <div
                className="flex flex-column col-12 md-col-4 mb4"
        >
<<<<<<< HEAD
                <h2
                        className="block-headline mb3"
                >
                        foo
                </h2>
                <div
                        className=""
                >
                        <Button
                                className="inline-flex"
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="foo"
                                onClick={[Function]}
                                shadow={false}
                                to="foo"
                                type="button"
                                variant="primary"
                        />
=======
                <div>
                        <h2
                                className="block-headline mb3"
                        >
                                foo
                        </h2>
                        <div
                                className="inline-flex mb3"
                        >
                                <Button
                                        className=""
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="foo"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to="foo"
                                        type="button"
                                        variant="primary"
                                />
                        </div>
>>>>>>> Add ShopOnlineNavDropdown test
                </div>
        </div>
        <div
                className="col-12 md-col-8 form-container-width"
        >
                <div
                        className="my2 w100"
                >
                        <div
                                className="flex flex-row justify-between items-start"
                        >
                                <Button
                                        className="col-10 flex flex-start"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="style-none"
                                >
                                        <p
                                                className="text-madison-blue semi-bold"
                                        />
                                </Button>
                                <Button
                                        className="display-none transition-slide-up col-2"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="style-none"
                                >
                                        <Image
                                                alt=""
                                                bg={false}
                                                className="ml-auto"
                                                onImgLoad={[Function]}
                                                src="/assets/images/arrow-dropdown-active-peach.svg"
                                                style={Object {}}
                                        />
                                </Button>
                                <Button
                                        className="transition-slide-up col-2"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="style-none"
                                >
                                        <Image
                                                alt=""
                                                bg={false}
                                                className="ml-auto"
                                                onImgLoad={[Function]}
                                                src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                style={Object {}}
                                        />
                                </Button>
                        </div>
                        <p
                                className="block-subheadline pt4 pb4 mb3 transition-slide-up"
                        />
                </div>
        </div>
</div>,
      "className": "flex justify-center px3 py4",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex flex-column col-12 md-col-4 mb4"
>
<<<<<<< HEAD
            <h2
                        className="block-headline mb3"
            >
                        foo
            </h2>
            <div
                        className=""
            >
                        <Button
                                    className="inline-flex"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="foo"
                                    onClick={[Function]}
                                    shadow={false}
                                    to="foo"
                                    type="button"
                                    variant="primary"
                        />
=======
            <div>
                        <h2
                                    className="block-headline mb3"
                        >
                                    foo
                        </h2>
                        <div
                                    className="inline-flex mb3"
                        >
                                    <Button
                                                className=""
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="foo"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                shadow={false}
                                                to="foo"
                                                type="button"
                                                variant="primary"
                                    />
                        </div>
>>>>>>> Add ShopOnlineNavDropdown test
            </div>
</div>,
          <div
            className="col-12 md-col-8 form-container-width"
>
            <div
                        className="my2 w100"
            >
                        <div
                                    className="flex flex-row justify-between items-start"
                        >
                                    <Button
                                                className="col-10 flex flex-start"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label=""
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="style-none"
                                    >
                                                <p
                                                            className="text-madison-blue semi-bold"
                                                />
                                    </Button>
                                    <Button
                                                className="display-none transition-slide-up col-2"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label=""
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="style-none"
                                    >
                                                <Image
                                                            alt=""
                                                            bg={false}
                                                            className="ml-auto"
                                                            onImgLoad={[Function]}
                                                            src="/assets/images/arrow-dropdown-active-peach.svg"
                                                            style={Object {}}
                                                />
                                    </Button>
                                    <Button
                                                className="transition-slide-up col-2"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label=""
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="style-none"
                                    >
                                                <Image
                                                            alt=""
                                                            bg={false}
                                                            className="ml-auto"
                                                            onImgLoad={[Function]}
                                                            src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                            style={Object {}}
                                                />
                                    </Button>
                        </div>
                        <p
                                    className="block-subheadline pt4 pb4 mb3 transition-slide-up"
                        />
            </div>
</div>,
        ],
        "className": "w100 flex content-width",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
<<<<<<< HEAD
                className="block-headline mb3"
=======
                            className="block-headline mb3"
              >
                            foo
              </h2>
              <div
                            className="inline-flex mb3"
              >
                            <Button
                                          className=""
                                          color="madison-blue"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="foo"
                                          onClick={[Function]}
                                          onMouseEnter={[Function]}
                                          onMouseLeave={[Function]}
                                          shadow={false}
                                          to="foo"
                                          type="button"
                                          variant="primary"
                            />
              </div>
</div>,
            "className": "flex col-12 md-col-4 pr3 mb4",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="block-headline mb3"
>>>>>>> Add ShopOnlineNavDropdown test
>
                foo
</h2>,
              <div
                className=""
>
<<<<<<< HEAD
                <Button
                                className="inline-flex"
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="foo"
                                onClick={[Function]}
                                shadow={false}
                                to="foo"
                                type="button"
                                variant="primary"
                />
=======
                  <Button
                                    className=""
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="foo"
                                    onClick={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    shadow={false}
                                    to="foo"
                                    type="button"
                                    variant="primary"
                  />
>>>>>>> Add ShopOnlineNavDropdown test
</div>,
            ],
            "className": "flex flex-column col-12 md-col-4 mb4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "block-headline mb3",
              },
              "ref": null,
              "rendered": "foo",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  className="inline-flex"
                  color="madison-blue"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="foo"
                  onClick={[Function]}
                  shadow={false}
                  to="foo"
                  type="button"
                  variant="primary"
/>,
                "className": "",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
<<<<<<< HEAD
                  "children": null,
                  "className": "inline-flex",
                  "color": "madison-blue",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "foo",
                  "onClick": [Function],
                  "shadow": false,
                  "to": "foo",
                  "type": "button",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
=======
                  "children": <Button
                    className=""
                    color="madison-blue"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label="foo"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    shadow={false}
                    to="foo"
                    type="button"
                    variant="primary"
/>,
                  "className": "inline-flex mb3",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": null,
                    "className": "",
                    "color": "madison-blue",
                    "disabled": false,
                    "fullWidth": false,
                    "hover": "shadow",
                    "label": "foo",
                    "onClick": [Function],
                    "onMouseEnter": [Function],
                    "onMouseLeave": [Function],
                    "shadow": false,
                    "to": "foo",
                    "type": "button",
                    "variant": "primary",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
>>>>>>> Add ShopOnlineNavDropdown test
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <div
                  className="my2 w100"
>
                  <div
                                    className="flex flex-row justify-between items-start"
                  >
                                    <Button
                                                      className="col-10 flex flex-start"
                                                      color="white-denim"
                                                      disabled={false}
                                                      fullWidth={false}
                                                      hover="shadow"
                                                      label=""
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      onMouseLeave={[Function]}
                                                      shadow={false}
                                                      to=""
                                                      type="button"
                                                      variant="style-none"
                                    >
                                                      <p
                                                                        className="text-madison-blue semi-bold"
                                                      />
                                    </Button>
                                    <Button
                                                      className="display-none transition-slide-up col-2"
                                                      color="white-denim"
                                                      disabled={false}
                                                      fullWidth={false}
                                                      hover="shadow"
                                                      label=""
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      onMouseLeave={[Function]}
                                                      shadow={false}
                                                      to=""
                                                      type="button"
                                                      variant="style-none"
                                    >
                                                      <Image
                                                                        alt=""
                                                                        bg={false}
                                                                        className="ml-auto"
                                                                        onImgLoad={[Function]}
                                                                        src="/assets/images/arrow-dropdown-active-peach.svg"
                                                                        style={Object {}}
                                                      />
                                    </Button>
                                    <Button
                                                      className="transition-slide-up col-2"
                                                      color="white-denim"
                                                      disabled={false}
                                                      fullWidth={false}
                                                      hover="shadow"
                                                      label=""
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      onMouseLeave={[Function]}
                                                      shadow={false}
                                                      to=""
                                                      type="button"
                                                      variant="style-none"
                                    >
                                                      <Image
                                                                        alt=""
                                                                        bg={false}
                                                                        className="ml-auto"
                                                                        onImgLoad={[Function]}
                                                                        src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                                        style={Object {}}
                                                      />
                                    </Button>
                  </div>
                  <p
                                    className="block-subheadline pt4 pb4 mb3 transition-slide-up"
                  />
</div>,
              ],
              null,
            ],
            "className": "col-12 md-col-8 form-container-width",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="flex flex-row justify-between items-start"
>
                    <Button
                                        className="col-10 flex flex-start"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="style-none"
                    >
                                        <p
                                                            className="text-madison-blue semi-bold"
                                        />
                    </Button>
                    <Button
                                        className="display-none transition-slide-up col-2"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="style-none"
                    >
                                        <Image
                                                            alt=""
                                                            bg={false}
                                                            className="ml-auto"
                                                            onImgLoad={[Function]}
                                                            src="/assets/images/arrow-dropdown-active-peach.svg"
                                                            style={Object {}}
                                        />
                    </Button>
                    <Button
                                        className="transition-slide-up col-2"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label=""
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="style-none"
                    >
                                        <Image
                                                            alt=""
                                                            bg={false}
                                                            className="ml-auto"
                                                            onImgLoad={[Function]}
                                                            src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                            style={Object {}}
                                        />
                    </Button>
</div>,
                  <p
                    className="block-subheadline pt4 pb4 mb3 transition-slide-up"
/>,
                ],
                "className": "my2 w100",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <Button
                        className="col-10 flex flex-start"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        shadow={false}
                        to=""
                        type="button"
                        variant="style-none"
>
                        <p
                                                className="text-madison-blue semi-bold"
                        />
</Button>,
                      <Button
                        className="display-none transition-slide-up col-2"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        shadow={false}
                        to=""
                        type="button"
                        variant="style-none"
>
                        <Image
                                                alt=""
                                                bg={false}
                                                className="ml-auto"
                                                onImgLoad={[Function]}
                                                src="/assets/images/arrow-dropdown-active-peach.svg"
                                                style={Object {}}
                        />
</Button>,
                      <Button
                        className="transition-slide-up col-2"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        shadow={false}
                        to=""
                        type="button"
                        variant="style-none"
>
                        <Image
                                                alt=""
                                                bg={false}
                                                className="ml-auto"
                                                onImgLoad={[Function]}
                                                src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                style={Object {}}
                        />
</Button>,
                    ],
                    "className": "flex flex-row justify-between items-start",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": <p
                          className="text-madison-blue semi-bold"
/>,
                        "className": "col-10 flex flex-start",
                        "color": "white-denim",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "",
                        "onClick": [Function],
                        "onMouseEnter": [Function],
                        "onMouseLeave": [Function],
                        "shadow": false,
                        "to": "",
                        "type": "button",
                        "variant": "style-none",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "",
                          "className": "text-madison-blue semi-bold",
                        },
                        "ref": null,
                        "rendered": "",
                        "type": "p",
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": <Image
                          alt=""
                          bg={false}
                          className="ml-auto"
                          onImgLoad={[Function]}
                          src="/assets/images/arrow-dropdown-active-peach.svg"
                          style={Object {}}
/>,
                        "className": "display-none transition-slide-up col-2",
                        "color": "white-denim",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "",
                        "onClick": [Function],
                        "onMouseEnter": [Function],
                        "onMouseLeave": [Function],
                        "shadow": false,
                        "to": "",
                        "type": "button",
                        "variant": "style-none",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "alt": "",
                          "bg": false,
                          "children": null,
                          "className": "ml-auto",
                          "onImgLoad": [Function],
                          "src": "/assets/images/arrow-dropdown-active-peach.svg",
                          "style": Object {},
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": <Image
                          alt=""
                          bg={false}
                          className="ml-auto"
                          onImgLoad={[Function]}
                          src="/assets/images/arrow-dropdown-inactive-peach.svg"
                          style={Object {}}
/>,
                        "className": "transition-slide-up col-2",
                        "color": "white-denim",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "",
                        "onClick": [Function],
                        "onMouseEnter": [Function],
                        "onMouseLeave": [Function],
                        "shadow": false,
                        "to": "",
                        "type": "button",
                        "variant": "style-none",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "alt": "",
                          "bg": false,
                          "children": null,
                          "className": "ml-auto",
                          "onImgLoad": [Function],
                          "src": "/assets/images/arrow-dropdown-inactive-peach.svg",
                          "style": Object {},
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "block-subheadline pt4 pb4 mb3 transition-slide-up",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 flex content-width"
>
          <div
                    className="flex flex-column col-12 md-col-4 mb4"
          >
<<<<<<< HEAD
                    <h2
                              className="block-headline mb3"
                    >
                              foo
                    </h2>
                    <div
                              className=""
                    >
                              <Button
                                        className="inline-flex"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="foo"
                                        onClick={[Function]}
                                        shadow={false}
                                        to="foo"
                                        type="button"
                                        variant="primary"
                              />
=======
                    <div>
                              <h2
                                        className="block-headline mb3"
                              >
                                        foo
                              </h2>
                              <div
                                        className="inline-flex mb3"
                              >
                                        <Button
                                                  className=""
                                                  color="madison-blue"
                                                  disabled={false}
                                                  fullWidth={false}
                                                  hover="shadow"
                                                  label="foo"
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  onMouseLeave={[Function]}
                                                  shadow={false}
                                                  to="foo"
                                                  type="button"
                                                  variant="primary"
                                        />
                              </div>
>>>>>>> Add ShopOnlineNavDropdown test
                    </div>
          </div>
          <div
                    className="col-12 md-col-8 form-container-width"
          >
                    <div
                              className="my2 w100"
                    >
                              <div
                                        className="flex flex-row justify-between items-start"
                              >
                                        <Button
                                                  className="col-10 flex flex-start"
                                                  color="white-denim"
                                                  disabled={false}
                                                  fullWidth={false}
                                                  hover="shadow"
                                                  label=""
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  onMouseLeave={[Function]}
                                                  shadow={false}
                                                  to=""
                                                  type="button"
                                                  variant="style-none"
                                        >
                                                  <p
                                                            className="text-madison-blue semi-bold"
                                                  />
                                        </Button>
                                        <Button
                                                  className="display-none transition-slide-up col-2"
                                                  color="white-denim"
                                                  disabled={false}
                                                  fullWidth={false}
                                                  hover="shadow"
                                                  label=""
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  onMouseLeave={[Function]}
                                                  shadow={false}
                                                  to=""
                                                  type="button"
                                                  variant="style-none"
                                        >
                                                  <Image
                                                            alt=""
                                                            bg={false}
                                                            className="ml-auto"
                                                            onImgLoad={[Function]}
                                                            src="/assets/images/arrow-dropdown-active-peach.svg"
                                                            style={Object {}}
                                                  />
                                        </Button>
                                        <Button
                                                  className="transition-slide-up col-2"
                                                  color="white-denim"
                                                  disabled={false}
                                                  fullWidth={false}
                                                  hover="shadow"
                                                  label=""
                                                  onClick={[Function]}
                                                  onMouseEnter={[Function]}
                                                  onMouseLeave={[Function]}
                                                  shadow={false}
                                                  to=""
                                                  type="button"
                                                  variant="style-none"
                                        >
                                                  <Image
                                                            alt=""
                                                            bg={false}
                                                            className="ml-auto"
                                                            onImgLoad={[Function]}
                                                            src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                            style={Object {}}
                                                  />
                                        </Button>
                              </div>
                              <p
                                        className="block-subheadline pt4 pb4 mb3 transition-slide-up"
                              />
                    </div>
          </div>
</div>,
        "className": "flex justify-center px3 py4",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex flex-column col-12 md-col-4 mb4"
>
<<<<<<< HEAD
              <h2
                            className="block-headline mb3"
              >
                            foo
              </h2>
              <div
                            className=""
              >
                            <Button
                                          className="inline-flex"
                                          color="madison-blue"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="foo"
                                          onClick={[Function]}
                                          shadow={false}
                                          to="foo"
                                          type="button"
                                          variant="primary"
                            />
=======
              <div>
                            <h2
                                          className="block-headline mb3"
                            >
                                          foo
                            </h2>
                            <div
                                          className="inline-flex mb3"
                            >
                                          <Button
                                                        className=""
                                                        color="madison-blue"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="shadow"
                                                        label="foo"
                                                        onClick={[Function]}
                                                        onMouseEnter={[Function]}
                                                        onMouseLeave={[Function]}
                                                        shadow={false}
                                                        to="foo"
                                                        type="button"
                                                        variant="primary"
                                          />
                            </div>
>>>>>>> Add ShopOnlineNavDropdown test
              </div>
</div>,
            <div
              className="col-12 md-col-8 form-container-width"
>
              <div
                            className="my2 w100"
              >
                            <div
                                          className="flex flex-row justify-between items-start"
                            >
                                          <Button
                                                        className="col-10 flex flex-start"
                                                        color="white-denim"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="shadow"
                                                        label=""
                                                        onClick={[Function]}
                                                        onMouseEnter={[Function]}
                                                        onMouseLeave={[Function]}
                                                        shadow={false}
                                                        to=""
                                                        type="button"
                                                        variant="style-none"
                                          >
                                                        <p
                                                                      className="text-madison-blue semi-bold"
                                                        />
                                          </Button>
                                          <Button
                                                        className="display-none transition-slide-up col-2"
                                                        color="white-denim"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="shadow"
                                                        label=""
                                                        onClick={[Function]}
                                                        onMouseEnter={[Function]}
                                                        onMouseLeave={[Function]}
                                                        shadow={false}
                                                        to=""
                                                        type="button"
                                                        variant="style-none"
                                          >
                                                        <Image
                                                                      alt=""
                                                                      bg={false}
                                                                      className="ml-auto"
                                                                      onImgLoad={[Function]}
                                                                      src="/assets/images/arrow-dropdown-active-peach.svg"
                                                                      style={Object {}}
                                                        />
                                          </Button>
                                          <Button
                                                        className="transition-slide-up col-2"
                                                        color="white-denim"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="shadow"
                                                        label=""
                                                        onClick={[Function]}
                                                        onMouseEnter={[Function]}
                                                        onMouseLeave={[Function]}
                                                        shadow={false}
                                                        to=""
                                                        type="button"
                                                        variant="style-none"
                                          >
                                                        <Image
                                                                      alt=""
                                                                      bg={false}
                                                                      className="ml-auto"
                                                                      onImgLoad={[Function]}
                                                                      src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                                      style={Object {}}
                                                        />
                                          </Button>
                            </div>
                            <p
                                          className="block-subheadline pt4 pb4 mb3 transition-slide-up"
                            />
              </div>
</div>,
          ],
          "className": "w100 flex content-width",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
<<<<<<< HEAD
                  className="block-headline mb3"
=======
                                className="block-headline mb3"
                >
                                foo
                </h2>
                <div
                                className="inline-flex mb3"
                >
                                <Button
                                                className=""
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="foo"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                shadow={false}
                                                to="foo"
                                                type="button"
                                                variant="primary"
                                />
                </div>
</div>,
              "className": "flex col-12 md-col-4 pr3 mb4",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="block-headline mb3"
>>>>>>> Add ShopOnlineNavDropdown test
>
                  foo
</h2>,
                <div
                  className=""
>
<<<<<<< HEAD
                  <Button
                                    className="inline-flex"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="foo"
                                    onClick={[Function]}
                                    shadow={false}
                                    to="foo"
                                    type="button"
                                    variant="primary"
                  />
=======
                    <Button
                                        className=""
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="foo"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to="foo"
                                        type="button"
                                        variant="primary"
                    />
>>>>>>> Add ShopOnlineNavDropdown test
</div>,
              ],
              "className": "flex flex-column col-12 md-col-4 mb4",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "block-headline mb3",
                },
                "ref": null,
                "rendered": "foo",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Button
                    className="inline-flex"
                    color="madison-blue"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label="foo"
                    onClick={[Function]}
                    shadow={false}
                    to="foo"
                    type="button"
                    variant="primary"
/>,
                  "className": "",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
<<<<<<< HEAD
                    "children": null,
                    "className": "inline-flex",
                    "color": "madison-blue",
                    "disabled": false,
                    "fullWidth": false,
                    "hover": "shadow",
                    "label": "foo",
                    "onClick": [Function],
                    "shadow": false,
                    "to": "foo",
                    "type": "button",
                    "variant": "primary",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
=======
                    "children": <Button
                      className=""
                      color="madison-blue"
                      disabled={false}
                      fullWidth={false}
                      hover="shadow"
                      label="foo"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      shadow={false}
                      to="foo"
                      type="button"
                      variant="primary"
/>,
                    "className": "inline-flex mb3",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": null,
                      "className": "",
                      "color": "madison-blue",
                      "disabled": false,
                      "fullWidth": false,
                      "hover": "shadow",
                      "label": "foo",
                      "onClick": [Function],
                      "onMouseEnter": [Function],
                      "onMouseLeave": [Function],
                      "shadow": false,
                      "to": "foo",
                      "type": "button",
                      "variant": "primary",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
>>>>>>> Add ShopOnlineNavDropdown test
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [
                  <div
                    className="my2 w100"
>
                    <div
                                        className="flex flex-row justify-between items-start"
                    >
                                        <Button
                                                            className="col-10 flex flex-start"
                                                            color="white-denim"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="shadow"
                                                            label=""
                                                            onClick={[Function]}
                                                            onMouseEnter={[Function]}
                                                            onMouseLeave={[Function]}
                                                            shadow={false}
                                                            to=""
                                                            type="button"
                                                            variant="style-none"
                                        >
                                                            <p
                                                                                className="text-madison-blue semi-bold"
                                                            />
                                        </Button>
                                        <Button
                                                            className="display-none transition-slide-up col-2"
                                                            color="white-denim"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="shadow"
                                                            label=""
                                                            onClick={[Function]}
                                                            onMouseEnter={[Function]}
                                                            onMouseLeave={[Function]}
                                                            shadow={false}
                                                            to=""
                                                            type="button"
                                                            variant="style-none"
                                        >
                                                            <Image
                                                                                alt=""
                                                                                bg={false}
                                                                                className="ml-auto"
                                                                                onImgLoad={[Function]}
                                                                                src="/assets/images/arrow-dropdown-active-peach.svg"
                                                                                style={Object {}}
                                                            />
                                        </Button>
                                        <Button
                                                            className="transition-slide-up col-2"
                                                            color="white-denim"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="shadow"
                                                            label=""
                                                            onClick={[Function]}
                                                            onMouseEnter={[Function]}
                                                            onMouseLeave={[Function]}
                                                            shadow={false}
                                                            to=""
                                                            type="button"
                                                            variant="style-none"
                                        >
                                                            <Image
                                                                                alt=""
                                                                                bg={false}
                                                                                className="ml-auto"
                                                                                onImgLoad={[Function]}
                                                                                src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                                                style={Object {}}
                                                            />
                                        </Button>
                    </div>
                    <p
                                        className="block-subheadline pt4 pb4 mb3 transition-slide-up"
                    />
</div>,
                ],
                null,
              ],
              "className": "col-12 md-col-8 form-container-width",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="flex flex-row justify-between items-start"
>
                      <Button
                                            className="col-10 flex flex-start"
                                            color="white-denim"
                                            disabled={false}
                                            fullWidth={false}
                                            hover="shadow"
                                            label=""
                                            onClick={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            shadow={false}
                                            to=""
                                            type="button"
                                            variant="style-none"
                      >
                                            <p
                                                                  className="text-madison-blue semi-bold"
                                            />
                      </Button>
                      <Button
                                            className="display-none transition-slide-up col-2"
                                            color="white-denim"
                                            disabled={false}
                                            fullWidth={false}
                                            hover="shadow"
                                            label=""
                                            onClick={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            shadow={false}
                                            to=""
                                            type="button"
                                            variant="style-none"
                      >
                                            <Image
                                                                  alt=""
                                                                  bg={false}
                                                                  className="ml-auto"
                                                                  onImgLoad={[Function]}
                                                                  src="/assets/images/arrow-dropdown-active-peach.svg"
                                                                  style={Object {}}
                                            />
                      </Button>
                      <Button
                                            className="transition-slide-up col-2"
                                            color="white-denim"
                                            disabled={false}
                                            fullWidth={false}
                                            hover="shadow"
                                            label=""
                                            onClick={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            shadow={false}
                                            to=""
                                            type="button"
                                            variant="style-none"
                      >
                                            <Image
                                                                  alt=""
                                                                  bg={false}
                                                                  className="ml-auto"
                                                                  onImgLoad={[Function]}
                                                                  src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                                  style={Object {}}
                                            />
                      </Button>
</div>,
                    <p
                      className="block-subheadline pt4 pb4 mb3 transition-slide-up"
/>,
                  ],
                  "className": "my2 w100",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <Button
                          className="col-10 flex flex-start"
                          color="white-denim"
                          disabled={false}
                          fullWidth={false}
                          hover="shadow"
                          label=""
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          shadow={false}
                          to=""
                          type="button"
                          variant="style-none"
>
                          <p
                                                    className="text-madison-blue semi-bold"
                          />
</Button>,
                        <Button
                          className="display-none transition-slide-up col-2"
                          color="white-denim"
                          disabled={false}
                          fullWidth={false}
                          hover="shadow"
                          label=""
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          shadow={false}
                          to=""
                          type="button"
                          variant="style-none"
>
                          <Image
                                                    alt=""
                                                    bg={false}
                                                    className="ml-auto"
                                                    onImgLoad={[Function]}
                                                    src="/assets/images/arrow-dropdown-active-peach.svg"
                                                    style={Object {}}
                          />
</Button>,
                        <Button
                          className="transition-slide-up col-2"
                          color="white-denim"
                          disabled={false}
                          fullWidth={false}
                          hover="shadow"
                          label=""
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          shadow={false}
                          to=""
                          type="button"
                          variant="style-none"
>
                          <Image
                                                    alt=""
                                                    bg={false}
                                                    className="ml-auto"
                                                    onImgLoad={[Function]}
                                                    src="/assets/images/arrow-dropdown-inactive-peach.svg"
                                                    style={Object {}}
                          />
</Button>,
                      ],
                      "className": "flex flex-row justify-between items-start",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": <p
                            className="text-madison-blue semi-bold"
/>,
                          "className": "col-10 flex flex-start",
                          "color": "white-denim",
                          "disabled": false,
                          "fullWidth": false,
                          "hover": "shadow",
                          "label": "",
                          "onClick": [Function],
                          "onMouseEnter": [Function],
                          "onMouseLeave": [Function],
                          "shadow": false,
                          "to": "",
                          "type": "button",
                          "variant": "style-none",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "",
                            "className": "text-madison-blue semi-bold",
                          },
                          "ref": null,
                          "rendered": "",
                          "type": "p",
                        },
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": <Image
                            alt=""
                            bg={false}
                            className="ml-auto"
                            onImgLoad={[Function]}
                            src="/assets/images/arrow-dropdown-active-peach.svg"
                            style={Object {}}
/>,
                          "className": "display-none transition-slide-up col-2",
                          "color": "white-denim",
                          "disabled": false,
                          "fullWidth": false,
                          "hover": "shadow",
                          "label": "",
                          "onClick": [Function],
                          "onMouseEnter": [Function],
                          "onMouseLeave": [Function],
                          "shadow": false,
                          "to": "",
                          "type": "button",
                          "variant": "style-none",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "alt": "",
                            "bg": false,
                            "children": null,
                            "className": "ml-auto",
                            "onImgLoad": [Function],
                            "src": "/assets/images/arrow-dropdown-active-peach.svg",
                            "style": Object {},
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": <Image
                            alt=""
                            bg={false}
                            className="ml-auto"
                            onImgLoad={[Function]}
                            src="/assets/images/arrow-dropdown-inactive-peach.svg"
                            style={Object {}}
/>,
                          "className": "transition-slide-up col-2",
                          "color": "white-denim",
                          "disabled": false,
                          "fullWidth": false,
                          "hover": "shadow",
                          "label": "",
                          "onClick": [Function],
                          "onMouseEnter": [Function],
                          "onMouseLeave": [Function],
                          "shadow": false,
                          "to": "",
                          "type": "button",
                          "variant": "style-none",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "alt": "",
                            "bg": false,
                            "children": null,
                            "className": "ml-auto",
                            "onImgLoad": [Function],
                            "src": "/assets/images/arrow-dropdown-inactive-peach.svg",
                            "style": Object {},
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        "type": [Function],
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "",
                      "className": "block-subheadline pt4 pb4 mb3 transition-slide-up",
                    },
                    "ref": null,
                    "rendered": "",
                    "type": "p",
                  },
                ],
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FAQBlock
    block={
        Object {
            "fields": Object {
              "buttonLabel": "",
              "buttonLink": "",
              "headingAndQa": Object {
                "fragments": Array [],
              },
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w100 flex content-width"
>
        <div
                className="flex flex-column col-12 md-col-4 mb4"
        >
                <h2
                        className="block-headline mb3"
                />
        </div>
        <div
                className="col-12 md-col-8 form-container-width"
        >
                
        </div>
</div>,
      "className": "flex justify-center px3 py4",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex flex-column col-12 md-col-4 mb4"
>
            <h2
                        className="block-headline mb3"
            />
</div>,
          <div
            className="col-12 md-col-8 form-container-width"
>
            
</div>,
        ],
        "className": "w100 flex content-width",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="block-headline mb3"
/>,
              null,
            ],
            "className": "flex flex-column col-12 md-col-4 mb4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "block-headline mb3",
              },
              "ref": null,
              "rendered": "",
              "type": "h2",
            },
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [],
              null,
            ],
            "className": "col-12 md-col-8 form-container-width",
          },
          "ref": null,
          "rendered": Array [
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 flex content-width"
>
          <div
                    className="flex flex-column col-12 md-col-4 mb4"
          >
                    <h2
                              className="block-headline mb3"
                    />
          </div>
          <div
                    className="col-12 md-col-8 form-container-width"
          >
                    
          </div>
</div>,
        "className": "flex justify-center px3 py4",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex flex-column col-12 md-col-4 mb4"
>
              <h2
                            className="block-headline mb3"
              />
</div>,
            <div
              className="col-12 md-col-8 form-container-width"
>
              
</div>,
          ],
          "className": "w100 flex content-width",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="block-headline mb3"
/>,
                null,
              ],
              "className": "flex flex-column col-12 md-col-4 mb4",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "block-headline mb3",
                },
                "ref": null,
                "rendered": "",
                "type": "h2",
              },
              null,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [],
                null,
              ],
              "className": "col-12 md-col-8 form-container-width",
            },
            "ref": null,
            "rendered": Array [
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
